tests/fixtures/LatestTests/ObjectTests/errors/invalid_declaration.fg
/; EXPECT_ERROR: InvalidAssignmentToAnObject

type Person = {
    name: str
    age: int
}

var p: Person = Nir